[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/menu/SettingsMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -70.0
margin_right = 166.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 332.0
margin_bottom = 140.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 332.0
margin_bottom = 24.0

[node name="Fullscreen" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
size_flags_horizontal = 2
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 332.0
margin_bottom = 24.0
clip_text = true
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 332.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 178.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music"

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 182.0
margin_right = 332.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 0
max_value = 1.0
step = 0.05
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 332.0
margin_bottom = 64.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 178.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Sound FX"

[node name="SoundVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 182.0
margin_right = 332.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
max_value = 1.0
step = 0.05

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 332.0
margin_bottom = 140.0
size_flags_vertical = 10

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
size_flags_horizontal = 2
text = "Save"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 232.0
margin_right = 332.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/BackButton" to="." method="_on_BackButton_pressed"]
